openday_scavenger/puzzles/xray_filters/static/xray_filters.css
* {
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: rgb(167 193 204);
    display: flex;
    flex-direction: column;
    font-family: 'Arial', sans-serif;
    font-size: 16px;
}

.title-banner {
    width: 100%;
    background-color: #444649;
    color: white;
    padding: 20px 0;
    text-align: center;
}

.title-banner h1 {
    font-size: 2.5rem;
    margin: 0;
}

.main-content {
    margin: 0 8px;
    padding: 10px;
}


h3 {
    margin: 20px 0;
    font-size: 2rem;
    color: #3f3f3f;
}

p {
    font-size: 1rem;
    color: #383636;
    text-align: center;
    margin: 16px 0;
}

.checkbox-container {
    width: 100%;
    max-width: 400px;
    text-align: left;
}

label {
    font-size: 1rem;
    color: #333;
    display: block;
    margin-bottom: 10px;
}

input[type="checkbox"] {
    margin-right: 10px;
}

button {
    background-color: #444649;
    color: white;
    font-size: 1rem;
    border: none;
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-top: 10px;
    border-radius: 5px;
    padding: 10px;
}

#output {
    margin-top: 20px;
    font-size: 1.2rem;
    font-weight: bold;
}

/************** Set up for mobile screens ***************/
@media only screen and (max-width: 800px) {
    body {
        font-size: 14px;
    }
    .title-banner {
        padding: 15px 0;
    }
    .title-banner h1{
        font-size: calc(1.2rem + .9vw);
        line-height: 0.8;
        padding: 0;
        margin: 0;
    }

    button {
        font-size: 0.9rem;
        padding: 8px 16px;
        width: 100%;
    }

    .checkbox-container {
        max-width: 95%;
    }
}

/* -------------------- Image classes and their positioning ---------------------- */
.image-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
    width: 100%;
    max-width: 800px;
    height: auto;
    box-sizing: border-box;
    margin: 0 auto;
    background-color: rgb(250, 252, 255);
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.699);
}

.table-and-beam {
    display: block;
    max-width: 76%;
    max-height: 100%;
    height: auto;
    padding: 19% 0px 5% 0;
}

.arrow-left {
    position: absolute;
    width: 10%;
    height: auto;
    top: 55.2%;
    left: 88.5%;
}


.filter-image {
    position: absolute;
    width: 3%;
    height: auto;
    transform: translate(-50%, -50%);
}


.filter1 {
    top: 25%;
    left: 38.5%;
}
.filter1-down {
    top: 55%;
}

.filter2 {
    top: 25%;
    left: 47%;
}
.filter2-down {
    top: 55%;
}

.filter3 {
    top: 24.5%;
    left: 55%;
}
.filter3-down {
    top: 54.5%;
}

.filter4 {
    top: 24%;
    left: 63%;
    width: 4%;
}

.filter4-down {
    top: 54%;
}

.beam1, .beam2, .beam3, .beam4 {
    position: absolute;
    height: 4.3%;
    top: 54.9%;
    left: 12%;
    transform-origin: left;
    visibility: hidden;
    opacity: 0;
    -webkit-filter: brightness(0.8) saturate(0.7);
}

.beam1 {
    width: 26.1%;
}
.beam2 {
    width: 34.6%;
}
.beam3 {
    width: 42.7%;
}
.beam4 {
    width: 50.3%;
}


img.dim-2 {
    -webkit-filter: brightness(0.7) saturate(0.6);
}

img.dim-3 {
    -webkit-filter: brightness(0.6) saturate(0.6);
}

img.dim-4 {
    -webkit-filter: brightness(0.5) saturate(0.6);
    -web
}

